[AH] 아이템 수정 구현 및 swagger 작성
