# src/controllers/alcHistoryCtrl.ts
@@ -3,6 +3,7 @@ import {
   createAlcHistory,
   deleteAlcHistory,
   fetchAlcHistory,
+  updateAlcHistory,
 } from "../services/alcHistoryService";
 import { checkToken } from "../services/authService";
 import { ResultCode } from "../types/resultCode";
@@ -34,12 +35,40 @@ const alcHistoryCtrl = {
     });
   },
   async updateAlcHistory(req: any, res: any) {
-    const data = null;
-    res.json({
-      code: ResultCode.Success,
-      message: "updateAlcHistory",
-      data: data,
-    });
+    const userInfo = await checkToken(req, res);
+    if (!userInfo) {
+      res.status(ResultCode.Unauthorized).json({
+        code: ResultCode.Unauthorized,
+        message: "로그인이 되어있지 않습니다.",
+        data: null,
+      });
+    } else {
+      const itemId = req.body.id;
+      const newData: AlcHistoryFormData = req.body.data;
+      try {
+        const result = await updateAlcHistory(userInfo.uid, itemId, newData);
+        if (result) {
+          res.json({
+            code: ResultCode.Success,
+            message: "[AH] 글 수정에 정상적으로 성공하였습니다.",
+            data: result,
+          });
+        } else {
+          res.json({
+            code: ResultCode.BadRequest,
+            message: "파이어베이스 오류",
+            data: result,
+          });
+        }
+      } catch (err) {
+        console.log(err);
+        res.json({
+          code: ResultCode.BadRequest,
+          message: "파이어베이스 오류",
+          data: null,
+        });
+      }
+    }
   },
   async addAlcHistory(req: any, res: any) {
     const userInfo = await checkToken(req, res);
@@ -50,42 +79,29 @@ const alcHistoryCtrl = {
         data: null,
       });
     } else {
-      const reqData: AlcHistoryFormData = req.body.data;
-      if (
-        !reqData?.memo ||
-        !reqData?.writeDateDay ||
-        !reqData?.writeDateMonth ||
-        !reqData?.writeDateYear
-      ) {
-        res.json({
-          code: ResultCode.BadRequest,
-          message: "파라미터에 값이 올바르지 않습니다.",
-          data: null,
-        });
-      } else {
-        try {
-          const result = await createAlcHistory(userInfo.uid, req.body.data);
-          if (result) {
-            res.json({
-              code: ResultCode.Success,
-              message: "[AH] 글 작성에 정상적으로 성공하였습니다.",
-              data: result,
-            });
-          } else {
-            res.json({
-              code: ResultCode.BadRequest,
-              message: "파이어베이스 오류",
-              data: result,
-            });
-          }
-        } catch (err) {
-          console.log(err);
+      const newData: AlcHistoryFormData = req.body.data;
+      try {
+        const result = await createAlcHistory(userInfo.uid, newData);
+        if (result) {
+          res.json({
+            code: ResultCode.Success,
+            message: "[AH] 글 작성에 정상적으로 성공하였습니다.",
+            data: result,
+          });
+        } else {
           res.json({
             code: ResultCode.BadRequest,
             message: "파이어베이스 오류",
-            data: null,
+            data: result,
           });
         }
+      } catch (err) {
+        console.log(err);
+        res.json({
+          code: ResultCode.BadRequest,
+          message: "파이어베이스 오류",
+          data: null,
+        });
       }
     }
   },
