# src/models/alcHistory.ts
@@ -1,24 +1,25 @@
 /** 하루 동안 마신 술의 내용 */
 export interface AlcHistoryDaysDrink {
-    id: string;
-    write_date: string;
-    alcohol_list: AlcHistoryDrunked[];
-    memo: string;
+  uid: string;
+  id: string;
+  write_date: string;
+  alcohol_list: AlcHistoryDrunked[];
+  memo: string;
 }
 
 /** 마신 술 하나에 대한 정보 */
 export interface AlcHistoryDrunked {
-    alcohol_name: string;
-    alcohol_type: string;
-    drunked: number;
-    alcohol_intake: number;
-    alcohol_image: string;
+  alcohol_name: string;
+  alcohol_type: string;
+  drunked: number;
+  alcohol_intake: number;
+  alcohol_image: string;
 }
 
 export interface AlcHistoryFormData {
-    writeDateYear: number;
-    writeDateMonth: number;
-    writeDateDay: number;
-    alcoholList: AlcHistoryDrunked[];
-    memo: string;
+  writeDateYear: number;
+  writeDateMonth: number;
+  writeDateDay: number;
+  alcoholList: AlcHistoryDrunked[];
+  memo: string;
 }
